hphp/hack/test/typecheck/case_type/recursive/subtyping_simple1.php.exp
ERROR: File "subtyping_simple1.php", line 4, characters 11-11:
This recursive case type is not supported. `A` should not be at the top-level. (Typing[4485])
ERROR: File "subtyping_simple1.php", line 11, characters 17-18:
Invalid argument (Typing[4110])
  File "subtyping_simple1.php", line 7, characters 24-29:
  Expected `string`
  File "subtyping_simple1.php", line 4, characters 11-11:
  But got `mixed` arising from an implicit `as ?nonnull` constraint on this type
ERROR: File "subtyping_simple1.php", line 12, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_simple1.php", line 6, characters 19-19:
  Expected `A`
  File "subtyping_simple1.php", line 9, characters 20-25:
  But got `string`
